<resources>
    <string name="app_name">Scammer Bingo</string>
    <string name="app_description">Waste as much of the scammers time as you can!</string>
    <string name="title_activity_settings">Settings</string>
    <string name="title_activity_about">About</string>
    <string name="title_activity_numbers">Scammer Bingo - Numbers!</string>

    <string name="ad_footer_id">ca-app-pub-9817254026781393/3724159668</string>

    <string name="remove_ads_public_key">MIIBIjANBgkqhkiG9w0BAQEFAAOCAQ8AMIIBCgKCAQEAvVJswtU9lvDBE1CnTNZm9j8eg3RmeCgoqDwSgl+Zw3jhZXFHepXkJ5XvlYBi0lFxefdG7rMgZFjKEe/VqJmr+GuxnKU6hZjxXR5RqmO+gmAnZ6LhQ6djvdaG87/cp4vy+Hy2r7gRAj4+K9X5stnuuTsx6R1g0c2XdvbHobCcnKiKaN7/Xqvxd+PgRBtmfxj5mBgDb9tKWlF3Dml/hdt9UPhVHmXr0OG43Ev9TSWQjIng6UCq//AkTmSoj9FaFywGMs+NO8lfv2ZA5N56Z0rbPSL4bcF5fVaOk0e2K0/8l4ocseZ6ZVPELwZBqDmlJ1YeaLtiV3qtqVIu/WsGrcE/BQIDAQAB</string>

    <string name="about_msg_credits">
        Scammer bingo was designed from the windows community version created by JoeTheHuman. HexxiumGamingYT, Lewis Tech
        and Dazzas Gone Mad have amazing videos where they talk to scammers, check them all out!
    </string>

    <string name="score">Score</string>
    <string name="bingo_complete_title">Bingo!</string>
    <string name="bingo_complete_msg">Well done, you played the scammer for a really long time! Make sure to report them!</string>
    <string name="bingo_half_title">Half way there</string>
    <string name="bingo_half_msg">You\'re half way there! You can rat out the scammer now if it\'s taking too long but still make sure to report them!</string>

    <string name="call_dialog_title">Are you sure you want to call this phone number?</string>
    <string name="call_dialog_msg">This number is known for contacting scammers, are you sure you want to call?</string>
    <string name="call_dialog_unable">Unable to call phone number</string>

    <string name="website_dialog_title">Are you sure you want to open this URL?</string>
    <string name="website_dialog_message">This website is known for advertising scammers, are you sure you want to open it?</string>

    <string name="numbers_dialog_title">How to play Scammer bingo - Numbers</string>
    <string name="numbers_dialog_message">Try to get the scammer to say any of the numbers and mark them off as you go!</string>

    <string name="appbar_scrolling_view_behavior">android.support.design.widget.AppBarLayout$ScrollingViewBehavior</string>
    <string name="pref_header_general">General</string>
    <string name="youtube">YouTube</string>
    <string name="github">GitHub</string>
    <string name="twitter">Twitter</string>
    <string name="website">Website</string>

    <string name="action_okay">Okay</string>
    <string name="action_no">No thanks</string>
    <string name="action_never">Dont show this again</string>
    <string name="action_reset">Reset Score</string>
    <string name="action_call">Call</string>
    <string name="action_dismiss">Dismiss</string>
    <string name="action_open">Open</string>
    <string name="action_search">Search</string>
    <string name="action_settings">Settings</string>
    <string name="action_numbers">Numbers Edition</string>

    <string name="pref_title_social_recommendations">Enable social recommendations</string>
    <string name="pref_description_social_recommendations">Recommendations for people to contact
        based on your message history
    </string>

    <string name="pref_title_display_name">Display name</string>
    <string name="pref_default_display_name">John Smith</string>

    <string name="pref_title_add_friends_to_messages">Add friends to messages</string>
    <string-array name="pref_example_list_titles">
        <item>Always</item>
        <item>When possible</item>
        <item>Never</item>
    </string-array>
    <string-array name="pref_example_list_values">
        <item>1</item>
        <item>0</item>
        <item>-1</item>
    </string-array>

    <!-- Example settings for Data & Sync -->
    <string name="pref_header_data_sync">Data &amp; sync</string>

    <string name="pref_title_sync_frequency">Sync frequency</string>
    <string-array name="pref_sync_frequency_titles">
        <item>15 minutes</item>
        <item>30 minutes</item>
        <item>1 hour</item>
        <item>3 hours</item>
        <item>6 hours</item>
        <item>Never</item>
    </string-array>
    <string-array name="pref_sync_frequency_values">
        <item>15</item>
        <item>30</item>
        <item>60</item>
        <item>180</item>
        <item>360</item>
        <item>-1</item>
    </string-array>

    <string name="pref_title_system_sync_settings">System sync settings</string>

    <!-- Example settings for Notifications -->
    <string name="pref_header_notifications">Notifications</string>

    <string name="pref_title_new_message_notifications">New message notifications</string>

    <string name="pref_title_ringtone">Ringtone</string>
    <string name="pref_ringtone_silent">Silent</string>

    <string name="pref_title_vibrate">Vibrate</string>
    <string name="pref_enable_sounds">Enable Sounds</string>
    <string name="pref_enable_sounds_desc_on">Playing sounds whenever tile checked</string>
    <string name="pref_enable_sounds_desc_off">Not playing sounds whenever tile checked</string>
    <string name="pref_enable_auto_reset">Enable Auto Reset</string>
    <string name="pref_enable_auto_reset_desc">Will auto reset once max score is reached</string>
    <string name="action_about">About</string>
    <string name="title_activity_search">SearchActivity</string>
    <string name="action_home">Home</string>
    <string name="not_available_below_m">You need Android Marshmallow (6.0) or above to use this feature.</string>
    <string name="not_available_below_lollipop">You need Android Lollipop (5.0) or above to use this feature.</string>

    <string-array name="periphArray">
        <item name="periph01">Do you need technical suppowt?</item>
        <item name="periph02">Press the Windows Key and the Letter R, R as in Romeo. You got that?</item>
        <item name="periph03">Your Windows dextop is wirused sir.</item>
        <item name="periph04">I see lots of malware and infections on your computer sir.</item>
        <item name="periph05">DABLU DABLU DABLU DOT SUPPOWT DOT ME SIR, 3 DABLUS NOT 4!!!</item>
        <item name="periph06">That will be a one time charge of $199.99 sir.</item>
        <item name="periph07">There are tons of junk files on this computer sir.</item>
        <item name="periph08">All these stopped services are bad sir.</item>
        <item name="periph09">Oh my gosh sir!!! All these errors and warnings are Chinese hackers sir!!!</item>
        <item name="periph10">DONTOUCHTHEKEYBOWDORMOUSESIR!!!</item>
        <item name="periph11">BRIT MONKAY&#8230;</item>
        <item name="periph12">I\'m not a scam sir.</item>
        <item name="periph13">I will show you each and everything sir.</item>
        <item name="periph14">#PRAYFORSID.</item>
    </string-array>


    <string name="primary_color">Primary Color</string>
    <string name="primary_color_summary">Change the primary theme color</string>

    <string name="accent_color">Accent Color</string>
    <string name="accent_color_summary">Change the accent theme color</string>

    <string name="primary_text_color">Primary Text Color</string>
    <string name="primary_text_color_summary">Change the primary text color</string>

    <string name="secondary_text_color">Secondary Text Color</string>
    <string name="secondary_text_color_summary">Change the secondary text color</string>

    <string name="colored_status_bar">Colored Status Bar</string>
    <string name="colored_status_bar_summary">Toggle status bar coloring</string>

    <string name="colored_nav_bar">Colored Navigation Bar</string>
    <string name="colored_nav_bar_summary">Toggle navigation bar coloring</string>

    <string name="dark_theme">Dark Theme</string>
    <string name="dark_theme_summary">Apply a dark theme throughout the app</string>
    <string name="light_status_bar_mode">Light Status Bar Mode</string>
    <string name="light_toolbar_mode">Light Toolbar Mode</string>

    <string name="light_ui_modes">Light UI Modes</string>
    <string name="system_ui_colors">System UI Colors</string>
    <string name="base_theme">Base Theme</string>
    <string name="ate_colors">ATE Colors</string>

    <string-array name="light_status_mode_entries">
        <item>Off, status bar icons will be white</item>
        <item>On, status bar icons will be black</item>
        <item>Auto, status bar icons will be black if primary color is light</item>
    </string-array>

    <string-array name="light_toolbar_mode_entries">
        <item>Off, toolbar text/icons will be white</item>
        <item>On, toolbar text/icons will be black</item>
        <item>Auto, toolbar text/icons will be black if primary color is light</item>
    </string-array>

    <string-array name="light_status_mode_values">
        <item>0</item>
        <item>1</item>
        <item>2</item>
    </string-array>

</resources>
