<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <item
        android:icon="@drawable/ic_search"
        android:id="@+id/action_search"
        android:orderInCategory="100"
        android:title="@string/action_search"
        app:showAsAction="always" />
    <item
        android:id="@+id/action_reset"
        android:title="@string/action_reset"
        android:orderInCategory="101"
        app:showAsAction="never" />
    <item
        android:orderInCategory="102"
        android:title="@string/action_settings"
        android:id="@+id/action_settings"
        app:showAsAction="never" />
    <item
        android:orderInCategory="103"
        android:title="@string/action_about"
        android:id="@+id/action_about"
        app:showAsAction="never" />
</menu>